--- a/src/components/NFTsBoard/NFTsBoard.css
+++ b/src/components/NFTsBoard/NFTsBoard.css
@@ -537,7 +537,7 @@
     margin: 0;
   }
   .aboutNft {
-    padding-top: 0;
+    padding-top: 20px;
   }
   .nftListBox {
     border-radius: unset;
